<resources>
    <string name="app_name">GDCMNS2</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="home_temperature">Temperature</string>
    <string name="home_humidity">Humidity</string>
    <string name="home_weather">Weather</string>
    <string name="home_wind">Wind</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_dob">Date of Birth</string>
</resources>
